--- a/3rd.html
+++ b/3rd.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Bangladesh</h1>
     <h2>Dhaka</h2> <p>The p element represents a paragraph.
-        MDN ReferenceThe p element represents a paragraph.
-        MDN ReferenceThe p element represents a paragraph.
-        MDN ReferenceThe p element represents a paragraph.
-        MDN ReferenceThe p element represents a paragraph.
+        <i>MDN ReferenceThe p element represents a paragraph.
+            MDN ReferenceThe</i> p element represents a paragraph.
+       <b> MDN ReferenceThe p element represents a paragraph.
+        MDN ReferenceThe p element represents </b> paragraph.
         MDN Referencefd</p>
 
 </body>
