--- a/3rd.html
+++ b/3rd.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document 3rd</title>
 </head>
-<body>
-    <h1>Bangladesh</h1>
-    <h2>Dhaka</h2> <p>The p element represents a paragraph.
+<body>    
+    <h1 id="h1">Bangladesh</h1>
+    <h2 id="h2">Dhaka</h2>
+     <p id="p">The p element represents a paragraph.
         <i>MDN ReferenceThe p element represents a paragraph.
             MDN ReferenceThe</i> p element represents a paragraph.
        <b> MDN ReferenceThe p element represents a paragraph.
