--- a/3rd.html
+++ b/3rd.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document 3rd</title>
+    <link rel="stylesheet" href="style.css">
+    <samp id="samp"><img src="img\download (1).jfif" alt="">
+        <img src="img\images (4).jfif" alt="">
+        <img src="img\images (3).jfif" alt=""></samp>
 </head>
 <body>    
     <h1 id="h1">Bangladesh</h1>
