--- a/3rd.html
+++ b/3rd.html
@@ -12,12 +12,6 @@
 <body>    
     <h1 id="h1">Bangladesh</h1>
     <h2 id="h2">Dhaka</h2>
-     <p id="p">The p element represents a paragraph.
-        <i>MDN ReferenceThe p element represents a paragraph.
-            MDN ReferenceThe</i> p element represents a paragraph.
-       <b> MDN ReferenceThe p element represents a paragraph.
-        MDN ReferenceThe p element represents </b> paragraph.
-        MDN Referencefd</p>
-
+     <p id="p"><i>WellBeing International</i> <u>(WBI)</u> believes <b>that providing access to appropriate resources helps to inform people about the choices they can make that will have a positive impact on not just themselves and their families, but also for animals and the environment.</b><strong>WBI’s Website and our Direct Outreach via our newsletters (WellBeing News and Tales of WellBeing) and our social media pages.</strong>   The newsletters translate current scientific knowledge into crisp, clear and readable articles that cover a broad range of issues addressing the interactions among people, animals and the environment (the PAE triad).</p>
 </body>
 </html>
